--- a/views/boardList.ejs
+++ b/views/boardList.ejs
@@ -233,7 +233,7 @@
 
                     <div class="txt-box">
                         <h6>채팅방</h6>
-                        <p><button onclick='chatRoomJoin(${data.board_id})'>입장하기</button><p>
+                        <p><button onclick='chatRoomJoin(${data.id})'>입장하기</button><p>
                     </div>
                     ${data.poster_check === true ? 
                         `<div class="button-box">
