--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,11 +17,11 @@
             <input type="password" id="pw" placeholder="비밀번호" >
             <button type="button" onclick="userSignin()" class="login">로그인</button>
             <button onclick="authKaKao()" class="Klogin">카카오톡으로 로그인</button> <br/>
-            <div class="remember-me">
+            <!-- <div class="remember-me">
                 <input type="checkbox" id="remember" checked>
                 <label for="remember">로그인 상태 유지</label>
-            </div>
-            <a href="/findpw">비밀번호를 잊으셨나요?</a>
+            </div> -->
+            <a href="/findpw" class="findpw">비밀번호를 잊으셨나요?</a>
             <div class="signup">
                 <span>처음 오셨나요? </span>
                 <a href="/register">지금 가입하세요.</a>
