--- a/public/css/board/board_edit.css
+++ b/public/css/board/board_edit.css
@@ -1,114 +1,94 @@
-h1{
+h1 {
     color:  rgb(255, 255, 255);
     text-align: center;
 }
-body{
-    margin: 0;
+body {
+    margin: 0; padding: 0;
     background-color: rgb(71,87,111);
 }
-label{
-    color: rgb(255, 255, 255);
-}
-.board-form{
+
+/** board form **/
+.board-form {
     background-color: rgb(71,87,111);
-  
-    display: block;
-   margin-left: 5%;
-   margin-right: 5%;
-    margin-bottom: 5%;
+    display: block; margin-left: 5%; margin-right: 5%; margin-bottom: 5%;
 }
-.board-form #title {
-  
+/** board form > .left-form **/
+.board-form > .left-form {
+    margin:0 auto; display: flex;
+    width: 100%; flex-direction: column;
+}
+
+.board-form > .left-form > label {
+    color: rgb(255, 255, 255); margin-bottom: 8px;
+}
+.board-form > .left-form > #title {
     text-align: center;
-
-    width: 100%;
+    width: 100%; padding: 0.2em;
     height: 40px;
-
-    border: solid rgb(244, 115, 033) 3px;
+    border: solid #ccc 3px;
     border-radius: 10px;
     background-color:  rgb(255, 255, 255);
-
 }
-#content {
 
+.board-form > .left-form > #content {
     background-color: rgb(255, 255, 255);
-    border: solid rgb(244, 115, 033) 3px;
+    border: solid #ccc 3px;
     border-radius: 10px;
-
-    width: 100%;
+    width: 100%; padding: 0.2em; box-sizing: border-box;
     resize: none;
+}
 
-}
-#eventDate{
-    height: 40px;
-    background-color:rgb(255, 255, 255);
-    border: solid rgb(244, 115, 033)  3px;
-    border-radius: 10px;
-}
-#category{
-    margin-bottom: 40px;
-    height: 40px;
-    background-color: rgb(255, 255, 255);
-    border: solid rgb(244, 115, 033) 3px;
-    border-radius: 10px;
-}
-#boardCreateButton{
-    margin-bottom: 40px;
-    height: 40px;
-    background-color:rgb(255, 255, 255);
-    border: solid rgb(244, 115, 033) 3px;
-    border-radius: 10px;
-    color: rgb(244, 115, 033);
-}
-#boardCreateButton:hover{
 
-    background-color:rgb(244, 115, 033);
-    border: solid rgb(244, 115, 033) 3px;
-
-    color: rgb(255, 255, 255);
-}
-#backButton{
-    height: 40px;
-    background-color:rgb(255, 255, 255);
-    border: solid rgb(244, 115, 033) 3px;
-    border-radius: 10px;
-    color: rgb(244, 115, 033)
-}
-#backButton:hover{
-
-    background-color:rgb(244, 115, 033);
-    border: solid rgb(244, 115, 033) 3px;
-
-    color: rgb(255, 255, 255);
-}
-.left-form{
-    margin:0 auto;
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-   
-}
-.right-form{
-    margin:0 auto;
-    /* margin-right: 50px; */
+/** board form > .right-form **/
+.board-form > .right-form {
+    margin:0 auto;  /* margin-right: 50px; */
     display: flex;
     width: 100%;
     margin-top: 40px;
     flex-direction: column;
 }
+
+.board-form > .right-form > label {
+    color: rgb(255, 255, 255); margin-bottom: 8px;
+}
+
+.board-form > .right-form > #eventDate {
+    height: 40px; padding: 0.2em 0.5em;
+    background-color:rgb(255, 255, 255);
+    border: solid #ccc  3px;
+    border-radius: 10px;
+}
+
+.board-form > .right-form > #category {
+    margin-bottom: 40px;
+    height: 40px; padding: 0.2em;
+    background-color: rgb(255, 255, 255);
+    border: solid #ccc 3px;
+    border-radius: 10px;
+}
+
+.board-button {
+    height: 40px; color: #000;
+    background-color:rgb(255, 255, 255);
+    border: solid #ccc 3px;
+    border-radius: 10px;  margin-bottom: 10px;
+}
+
+.board-button:hover {
+    background-color:rgb(244, 115, 033);
+    border: solid rgb(244, 115, 033) 3px;
+    color: rgb(255, 255, 255);
+}
+
 @media (max-width : 800px) {
     .left-form{
-
         width: 100%;
-
     }
     .right-form{
         margin-top: 40px;
-
         width: 100%;
     }
     .board-form{
         display: block;
-
     }
 }
