--- a/public/css/header.css
+++ b/public/css/header.css
@@ -9,7 +9,6 @@
 .main-header {
     width: 100%; height: 60px;
     padding: 0 20px;
-
     display: flex; background-color: rgb(71,87,111);
     align-items: center; justify-content: space-between;
 }
@@ -58,7 +57,7 @@
 }
 
 .main-header > .header-profie > .header-profile-tab {
-    position: absolute; display: none;
+    position: absolute; display: none; z-index: 100;
     top: 35px; width: 150px; left: -120px; background-color: #fff;
     border-radius: 9px;
     list-style: none;  border: 1px solid #ddd; padding: 1em;
@@ -77,7 +76,7 @@
     font-size: 0.6em; text-decoration: none;
 }
 .main-header > .header-profie > .header-profile-tab > li > button {
-    font-size: 0.6em; border: 0; background: transparent;
+    font-size: 0.6em; border: 0; background: transparent; cursor: pointer;
 } 
 
 
