--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,8 +52,8 @@
                 <div class="logo">chatta</div>
                 <p class="footer-home">
                 <a href="/" class="link-1">Home</a>
-                <a class = "utube" href="/"> | <img src="../public/youtube icon.png" style="width: 20px; position: relative; top: 5px;"/></a>
-                <a class = "facebook" href="/"> | <img src="../public/facebook icon.png" style="width: 20px; position: relative; top: 5px;"/></a>
+                <a class = "utube" href="/"> | <img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/youtubeicon.png" style="width: 20px; position: relative; top: 5px;"/></a>
+                <a class = "facebook" href="/"> | <img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/facebookicon.png" style="width: 20px; position: relative; top: 5px;"/></a>
                 </p>    
                 <hr>
                 <p class="footer-project-info">
@@ -73,31 +73,31 @@
                 <p>김민영</p>
             </div>
             <div>
-                <p><a href="https://github.com/raddadda"><img src="../public/git icon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
+                <p><a href="https://github.com/raddadda"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
             </div>
             <div>
                 <p>김성제</p>
             </div>
             <div>
-                <p><a href="https://github.com/raddadda"><img src="../public/git icon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
+                <p><a href="https://github.com/raddadda"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
             </div>
             <div>
                 <p>류승기</p>
             </div>
             <div>
-                <p><a href="https://github.com/raddadda"><img src="../public/git icon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
+                <p><a href="https://github.com/raddadda"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
             </div>
             <div>
                 <p>정인근</p>
             </div>
             <div>
-                <p><a href="https://github.com/raddadda"><img src="../public/git icon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
+                <p><a href="https://github.com/raddadda"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
             </div>
             <div>
                 <p>최영찬 </p>
             </div>
             <div>
-                <p><a href="https://github.com/raddadda"><img src="../public/git icon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
+                <p><a href="https://github.com/raddadda"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
             </div>
         </div>
     </footer>
@@ -189,7 +189,7 @@
                                 <div class="boxBordCategory">${data.category}</div>
                                 <div class="boxTitle">${data.title}</div><br>
                                 <div class="boxCreateAt">${data.createAt}</div>
-                                <div class="boxViews"><img src="../public/view icon.png" style="width: 20px; position: relative; top: 5px" >${data.views}</div>      
+                                <div class="boxViews"><https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/viewicon.png" style="width: 20px; position: relative; top: 5px" >${data.views}</div>      
                             </div>
                         </div>
                         `;  
