--- a/views/index.ejs
+++ b/views/index.ejs
@@ -177,7 +177,7 @@
                                 <div class="boxBordCategory">${data.category}</div>
                                 <div class="boxTitle">${data.title}</div><br>
                                 <div class="boxCreateAt">${data.createAt}</div>
-                                <div class="boxViews"><img src="../public/view icon.png" style="width: 20px; position: relative; top: 5px" >${data.views}</div>      
+                                <div class="boxViews"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/viewicon.png" style="width: 20px; position: relative; top: 5px" >${data.views}</div>      
                             </div>
                         </div>
                         `;  
@@ -189,7 +189,7 @@
                                 <div class="boxBordCategory">${data.category}</div>
                                 <div class="boxTitle">${data.title}</div><br>
                                 <div class="boxCreateAt">${data.createAt}</div>
-                                <div class="boxViews"><https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/viewicon.png" style="width: 20px; position: relative; top: 5px" >${data.views}</div>      
+                                <div class="boxViews"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/viewicon.png" style="width: 20px; position: relative; top: 5px" >${data.views}</div>      
                             </div>
                         </div>
                         `;  
