S3 버킷 이미지 불러오기 구현

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -26,7 +26,7 @@
         <!-- 좌측 프로필 사진 및 닉네임 -->
         <div class="left-section">
             <div class="profile-picture">
-                <img src="" alt="프로필 사진">
+                <img src="<%= profileImage %>" alt="프로필 사진">
             </div>
             <div class="user-nickname">
                 <h1>
