--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -50,6 +50,9 @@ body {
 .left-section {
     text-align: center;
     margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* 프로필 사진 */
