--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,17 +15,19 @@
             <h2>로그인</h2>
             <input type="text" id="userid" placeholder="아이디" >
             <input type="password" id="pw" placeholder="비밀번호" >
+            <br />
+            <br />
             <button type="button" onclick="userSignin()" class="login">로그인</button>
-            <button onclick="authKaKao()" class="Klogin">카카오톡으로 로그인</button> <br/>
+            <button onclick="authKaKao()" class="Klogin">카카오톡으로 로그인</button> <br />
+            <br />
             <!-- <div class="remember-me">
                 <input type="checkbox" id="remember" checked>
                 <label for="remember">로그인 상태 유지</label>
             </div> -->
-            <a href="/findpw" class="findpw">비밀번호를 잊으셨나요?</a>
             <div class="signup">
-                <span>처음 오셨나요? </span>
-                <a href="/register">지금 가입하세요.</a>
+                <a href="/register">계정 등록하기</a>
             </div>
+            <a href="/findpw" class="findpw">비밀번호를 잊으셨나요?</a>
         </form>
     </div>
 </body>
