--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/public/js/register.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
     <title>Document</title>
     <link rel="stylesheet" href="/public/css/register.css">
 </head>
@@ -19,21 +20,24 @@
         <form name="signup-form">
             <div class="user-info">
                 <p>회원가입</p>
+                <label for="userid">아이디</label><span class="must"> (필수)</span>
                 <div class="info-set id">
-                    <label for="userid">아이디</label>
-                    <input type="text" name="userid" id="userid" placeholder="아이디"><br/>
+                    <input type="text" name="userid" id="userid" oninput='idCheck()' placeholder="아이디" >
+                    <br/>
                 </div>
+                <div id="idtx"></div>
                 <div class="info-set pw">
-                    <label for="pw">비밀번호</label>
-                    <input type="password" name="pw" id="pw" placeholder="비밀번호"><br/>
+                    <label for="pw">비밀번호</label><span class="must"> (필수)</span>
+                    <input type="password" name="pw" id="pw" oninput="pwCheck()" placeholder="비밀번호" ><br/>
                 </div>
                 <div class="info-set Cpw">
-                    <label for="Cpw">비밀번호 확인</label>
-                    <input type="password" name="Cpw" id="Cpw" placeholder="비밀번호 확인"><br/>
+                    <input type="password" name="Cpw" id="Cpw" oninput="pwCheck()" placeholder="비밀번호 확인" ><br/>
+                    <div id="pwtx"></div>
                 </div>
                 <div class="info-set email">
                     <label for="email">이메일</label>    
                     <input type="email" name="email" id="email" placeholder="임시 비밀번호를 받을 email"><br />
+                    <div id="emtx"></div>
                 </div>
                 <div class="info-set name">
                     <label for="name">이름</label>
@@ -66,11 +70,15 @@
                         </div>
                     </div>    
                 </div>
+                <br />
                 <div class="btn">
-                    <button type="button" onclick="userSignUp()">회원가입</button>
+                    <button type="button" class="registerBtn" onclick="userSignUp()" >회원가입</button>
                 </div>
             </div>
         </form>
     </div>
+    <script>
+  
+    </script>
 </body>
 </html>
